# integracion_claude

./: .env.example  .gitignore  DATABASE_SYNC_REPORT.md  DEV_SCRIPTS_FUNCTIONALITY_REPORT.md  README.md  README_CROSS_PLATFORM.md  WINDOWS_SETUP.md  dev-scripts.ps1  dev-scripts.sh  mcp-resources.json  mcp.json  package-lock.json  package.json  pyproject.toml  setup-supabase.sh  test-connection.js
